# watermelondb-backend-example

./: Dockerfile  README.md  docker-compose.yaml  hello.py  pyproject.toml
app/: crud.py  db.py  main.py  models.py  settings.py  sync.py
migrations/: env.py
migrations/versions/: 0d073bd918a3_add_timestamps.py  2e08e2e6eed8_init.py  77d86898c0a1_init.py
tests/: test_api.py  test_sync.py  utils.py
tests/api/: test_api.py
tests/sync/: test_get_sync.py  test_push_sync.py
