[project]
name = "watermelondb-backend-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.2",
    "fastapi[standard]>=0.112.2",
    "psycopg2>=2.9.9",
    "pydantic-settings>=2.4.0",
    "pytest>=8.3.2",
    "sqlalchemy>=2.0.32",
    "sqlmodel>=0.0.22",
]
